----------------------------------------------------------------------
Mar 26, 2013 - Clojure 1.3 - 1.6, sheet v13

Added new vars for Clojure 1.6.0:

    unsigned-bit-shift-right added to Primitives/Numbers/Bitwise
    record? added to Collections/Collections/Type tests
    some? added to Collections/Misc/Test
    if-some, when-some added to Macros/Branch and Vars and Special
        Forms/Binding Forms

The following new vars in Clojure 1.6.0 were not added to the cheat
sheet, sincet they seem fairly specialized for those implementing
their own collections:

    hash-ordered-coll, hash-unordered-coll, mix-collection-hash

----------------------------------------------------------------------
Oct 2, 2013 - Clojure 1.3 - 1.5, sheet v12

Added next to section Sequences/Seq in, Seq out/Tail-items

----------------------------------------------------------------------
Aug 27, 2013 - Clojure 1.3 - 1.5, sheet v11

Added link to Chas Emerick's handy Clojure type selection flowchart
after the headings of the Abstrations and Proxy sections:
    https://github.com/cemerick/clojure-type-selection-flowchart

Removed from Numbers/Test section: nil? and identical? did not really
belong there.

Added to Numbers/Test section: number? rational? integer? ratio?
decimal? float?

Added to Vars/Var objects section: bound? thread-bound?

----------------------------------------------------------------------
Mar 1, 2013 - Clojure 1.3 - 1.5, sheet v10

Added letfn to Special forms section

----------------------------------------------------------------------
Mar 1, 2013 - Clojure 1.3 - 1.5, sheet v9

Added these new symbols added in Clojure 1.5:

re-quote-replacement
*default-data-reader-fn*
as-> cond-> cond->> some-> some->>
send-via set-agent-send-executor! set-agent-send-off-executor!

Also the "Data Reader" subsection was moved from Primitives/Other
section to IO section, where it belongs much better.

Still to add: Several of the new functions in the